unpackaged/main/default/objects/Partnership__c/fields/Fund_Investment_Category__c.field-meta.xml
<CustomField>
    <fullName>Fund_Investment_Category__c</fullName>
    <label>Fund Investment Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>