unpackaged/main/default/objects/Partnership__c/fields/Total_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitments__c</fullName>
    <description>this will be a formula field</description>
    <label>Total Commitments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>