unpackaged/main/default/objects/Partnership__c/fields/Total_Commitments_USD_mn__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitments_USD_mn__c</fullName>
    <formula>Total_Commitments__c/1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commitments (mn)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>